
BlockFifo.h

  Fifo class with block operations.

net/SingleBridge.h

  Same as the Bridge, but connects two endpoint devices.

net/SingleEchoDevice.h

  Same as the EchoDevice, but works as an endpoint device.

net/PSec.h

  PSec implementation.

net/PKE.h

  PKE implementation.

math/SmallPrimes.h

  The list of all primes < 1000000 .

math/IntegerOctetBuilder.h

  Build an Integer from an octet array representation.

math/ModEngine.h

  Support for modular operations.

math/NoPrimeTest.h

  Quick "no-prime" test for integers.

crypton/DHExp.h

  Diffie-Hellman common secret generation.

crypton/Forget.h

  Forget() is added to properly cleanup info.

TypeSwitch.h

  Switch implementation based on int to type mapping.

gadget/Meta.h

  CommonType is added.

PerTask.h

  Advanced per-task object support.

TaskHeap.h

  Per-task heap.

gadget/UtilFunc.h

  Cap() and Fit() are added.

Swap.h

  NullBySwap() and MoveBySwap() are added.

net/PacketEndpointDevice.h

  Optional interfaces ConnectionProc are added.

net/SingleEchoDevice.h net/EchoDevice.h

  ConnectionProc interface implementation is added.

net/PacketEndpointDevice.h and related classes

  PortManager is added.

tools/PSecEchoTest is added

Scanf.h 

  Word EndOfScan is added.

Scanf.h

  ScanProxySet is added.

TypeNumber.h is added

InterfaceHost.h is added

DynObject.h is added

crypton/MD5.h

  MD5 hash algorithm implementation is added.

--- Updates ----------

Regen

  Fixed generated bar constructor and the method setTo(Bar &bar,uint32 ind).

WIN32 

  Target rebased on gcc-4.8.2 from the latest cygwin.

base/PlatformBase.h

  OptimizeBarrier() is added.

UIntSplit.h

  Len has made public.
  The method take() is added.

Random.h MersenneTwister.h

  warp() is added.

Counters.h

  operator += is added.

gadget/UIntFunc.h

  Multiplicative operations are added.

net/PTPClientDevice.h

  setSeed() and setLengths() are added.

----------------------